tests/ui/const-generics/mgca/bad-impl-trait-with-apit.stderr
error[E0121]: the placeholder `_` is not allowed within types on item signatures for implementations
  --> $DIR/bad-impl-trait-with-apit.rs:8:25
   |
LL | impl<'t> Trait for [(); N] {}
   |                         ^ not allowed in type signatures

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0121`.
